// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupHeader matches snapshot for admin user 1`] = `
<div>
  <div
    class="w-full"
  >
    <div
      class="flex flex-col items-center justify-center relative"
    >
      <div
        class="relative w-full h-56 md:h-80 group"
      >
        <img
          alt="This is banner Image"
          data-nimg="fill"
          decoding="async"
          loading="eager"
          sizes="100vw"
          src="http://localhost/_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=3840&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=640&q=75 640w, /_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=750&q=75 750w, /_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=828&q=75 828w, /_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=1080&q=75 1080w, /_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=1200&q=75 1200w, /_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=1920&q=75 1920w, /_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=2048&q=75 2048w, /_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=3840&q=75 3840w"
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; object-fit: cover; color: transparent; background-size: cover; background-position: 50% 50%; background-repeat: no-repeat;"
        />
        <div
          class="absolute inset-0 z-10 bg-slate-700 bg-opacity-0 group-hover:bg-opacity-50 transition duration-300 ease-in-out"
        />
        <div
          class="absolute z-20 top-0 left-0 m-4"
        >
          <button
            class="font-roboto whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border h-9 px-3 flex items-center justify-center bg-transparent group border-transparent group-hover:border group-hover:border-white text-white rounded-sm"
          >
            <svg
              class="lucide lucide-camera text-2xl"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.5 4h-5L7 7H4a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-3l-2.5-3z"
              />
              <circle
                cx="12"
                cy="13"
                r="3"
              />
            </svg>
            <span
              class="ml-2 opacity-0 group-hover:opacity-100 transition-opacity"
            >
              Edit cover image
            </span>
          </button>
        </div>
      </div>
      <div
        class="space-y-2"
      >
        <div
          class="relative w-full flex items-center"
          data-testid="input-container"
        >
          <input
            aria-describedby=":r0:-form-item-description"
            aria-invalid="false"
            aria-label="Upload profile picture"
            autocomplete="off"
            class="h-10 w-full rounded-lg border border-input bg-white dark:bg-dark-500 px-3 py-2 text-sm file:border-0 file:bg-transparent file:text-xs file:font-medium file:text-foreground placeholder:text-muted-foreground outline-none disabled:cursor-not-allowed disabled:opacity-50 hidden"
            data-testid="input-element"
            id="profile-picture-upload"
            type="file"
          />
        </div>
      </div>
      <div
        class="w-[110px] h-[110px] rounded-full p-[8.5px] absolute bottom-[-50px] left-0 right-0 mx-auto z-10"
      >
        <span
          class="relative flex shrink-0 overflow-hidden rounded-full w-[full] h-[full] bg-current"
          data-testid="avatar"
        >
          <span
            class="flex items-center justify-center w-24 h-24 rounded-full bg-slate-500"
          >
            CN
          </span>
        </span>
        <button
          aria-label="Upload profile picture"
          class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border rounded-full absolute bg-blue-500 bottom-0 right-2 w-[34px] h-[34px]"
        >
          <svg
            class="lucide lucide-plus text-white transition-all duration-300"
            fill="none"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
        </button>
        <div
          class="absolute top-2/3 left-1/2 flex justify-center items-center"
        >
          <div
            class="relative"
          >
            <button
              aria-label="Pop Button"
              class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-white text-button hover:bg-blue-100 hover:border-blue-100 hover:shadow-sphere-primary dark:hover:bg-blue-100 border-gray-800 dark:border-dark-500 -z-10 absolute border-none dark:bg-dark-900 rounded-full w-[34px] h-[34px] transition-all duration-300"
              style="transform: translate(0, -10px) rotate(10deg);"
            >
              <svg
                class="lucide lucide-camera text-slate-400 hover:text-white"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                style="transform: rotate(72deg);"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.5 4h-5L7 7H4a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-3l-2.5-3z"
                />
                <circle
                  cx="12"
                  cy="13"
                  r="3"
                />
              </svg>
            </button>
            <button
              aria-label="Pop Button"
              class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-white text-button hover:bg-blue-100 hover:border-blue-100 hover:shadow-sphere-primary dark:hover:bg-blue-100 border-gray-800 dark:border-dark-500 -z-10 absolute border-none dark:bg-dark-900 rounded-full w-[34px] h-[34px] transition-all duration-300"
              style="transform: translate(0, -10px) rotate(10deg);"
            >
              <svg
                class="lucide lucide-bell text-slate-400 hover:text-white"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                style="transform: rotate(36deg);"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 8a6 6 0 0 1 12 0c0 7 3 9 3 9H3s3-2 3-9"
                />
                <path
                  d="M10.3 21a1.94 1.94 0 0 0 3.4 0"
                />
              </svg>
            </button>
            <button
              aria-label="Pop Button"
              class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-white text-button hover:bg-blue-100 hover:border-blue-100 hover:shadow-sphere-primary dark:hover:bg-blue-100 border-gray-800 dark:border-dark-500 -z-10 absolute border-none dark:bg-dark-900 rounded-full w-[34px] h-[34px] transition-all duration-300"
              style="transform: translate(0, -10px) rotate(10deg);"
            >
              <svg
                class="lucide lucide-plus text-slate-400 hover:text-white"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                style="transform: rotate(0deg);"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
            </button>
            <button
              aria-label="Pop Button"
              class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-white text-button hover:bg-blue-100 hover:border-blue-100 hover:shadow-sphere-primary dark:hover:bg-blue-100 border-gray-800 dark:border-dark-500 -z-10 absolute border-none dark:bg-dark-900 rounded-full w-[34px] h-[34px] transition-all duration-300"
              style="transform: translate(0, -10px) rotate(10deg);"
            >
              <svg
                class="lucide lucide-message-circle text-slate-400 hover:text-white"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                style="transform: rotate(-36deg);"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
                />
              </svg>
            </button>
            <button
              aria-label="Pop Button"
              class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-white text-button hover:bg-blue-100 hover:border-blue-100 hover:shadow-sphere-primary dark:hover:bg-blue-100 border-gray-800 dark:border-dark-500 -z-10 absolute border-none dark:bg-dark-900 rounded-full w-[34px] h-[34px] transition-all duration-300"
              style="transform: translate(0, -10px) rotate(10deg);"
            >
              <svg
                class="lucide lucide-mail text-slate-400 hover:text-white"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                style="transform: rotate(-72deg);"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="16"
                  rx="2"
                  width="20"
                  x="2"
                  y="4"
                />
                <path
                  d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="space-y-2"
      >
        <div
          class="relative w-full flex items-center"
          data-testid="input-container"
        >
          <input
            aria-describedby=":r1:-form-item-description"
            aria-invalid="false"
            aria-label="Upload profile picture"
            autocomplete="off"
            class="h-10 w-full rounded-lg border border-input bg-white dark:bg-dark-500 px-3 py-2 text-sm file:border-0 file:bg-transparent file:text-xs file:font-medium file:text-foreground placeholder:text-muted-foreground outline-none disabled:cursor-not-allowed disabled:opacity-50 hidden"
            data-testid="input-element"
            id="avatar-picture-upload"
            type="file"
          />
        </div>
      </div>
    </div>
    <div
      class="w-full flex items-start justify-between py-3 mt-[50px]"
    >
      <div
        class="flex flex-col flex-1"
      >
        <span
          class="font-montserrat text-[25.6px] font-semibold"
        >
          2
        </span>
        <span
          class="text-neutral-100 text-4xs uppercase"
        >
          Members
        </span>
      </div>
      <div
        class="text-center flex-1"
      >
        <h2
          class="font-semibold font-montserrat text-xl"
        >
          Tech Enthusiasts
        </h2>
        <span
          class="font-roboto text-neutral-100 text-sm"
        >
          A group for technology lovers and innovators
        </span>
      </div>
      <div
        class="flex items-center justify-end flex-1 gap-2"
      >
        <button
          aria-controls="radix-:r2:"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="font-roboto justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring bg-transparent border-none rounded-none hover:bg-gray-100 dark:hover:bg-transparent text-neutral-200 dark:text-neutral-100 w-fit h-fit flex items-center gap-1 border border-gray-900"
          data-state="closed"
          type="button"
        >
          <svg
            class="lucide lucide-square-pen"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.375 2.625a1 1 0 0 1 3 3l-9.013 9.014a2 2 0 0 1-.853.505l-2.873.84a.5.5 0 0 1-.62-.62l.84-2.873a2 2 0 0 1 .506-.852z"
            />
          </svg>
        </button>
        <button
          aria-controls="radix-:r5:"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="font-roboto justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-transparent border-none rounded-none hover:bg-gray-100 dark:hover:bg-transparent text-neutral-200 dark:text-neutral-100 w-fit h-fit flex items-center gap-1 hover:text-red-600"
          data-state="closed"
          type="button"
        >
          <svg
            class="lucide lucide-x"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`GroupHeader matches snapshot for member user 1`] = `
<div>
  <div
    class="w-full"
  >
    <div
      class="flex flex-col items-center justify-center relative"
    >
      <div
        class="relative w-full h-56 md:h-80 group"
      >
        <img
          alt="This is banner Image"
          data-nimg="fill"
          decoding="async"
          loading="eager"
          sizes="100vw"
          src="http://localhost/_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=3840&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=640&q=75 640w, /_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=750&q=75 750w, /_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=828&q=75 828w, /_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=1080&q=75 1080w, /_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=1200&q=75 1200w, /_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=1920&q=75 1920w, /_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=2048&q=75 2048w, /_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=3840&q=75 3840w"
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; object-fit: cover; color: transparent; background-size: cover; background-position: 50% 50%; background-repeat: no-repeat;"
        />
        <div
          class="absolute inset-0 z-10 bg-slate-700 bg-opacity-0 group-hover:bg-opacity-50 transition duration-300 ease-in-out"
        />
        <div
          class="absolute z-20 top-0 left-0 m-4"
        >
          <button
            class="font-roboto whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border h-9 px-3 flex items-center justify-center bg-transparent group border-transparent group-hover:border group-hover:border-white text-white rounded-sm"
          >
            <svg
              class="lucide lucide-camera text-2xl"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.5 4h-5L7 7H4a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-3l-2.5-3z"
              />
              <circle
                cx="12"
                cy="13"
                r="3"
              />
            </svg>
            <span
              class="ml-2 opacity-0 group-hover:opacity-100 transition-opacity"
            >
              Edit cover image
            </span>
          </button>
        </div>
      </div>
      <div
        class="space-y-2"
      >
        <div
          class="relative w-full flex items-center"
          data-testid="input-container"
        >
          <input
            aria-describedby=":rg:-form-item-description"
            aria-invalid="false"
            aria-label="Upload profile picture"
            autocomplete="off"
            class="h-10 w-full rounded-lg border border-input bg-white dark:bg-dark-500 px-3 py-2 text-sm file:border-0 file:bg-transparent file:text-xs file:font-medium file:text-foreground placeholder:text-muted-foreground outline-none disabled:cursor-not-allowed disabled:opacity-50 hidden"
            data-testid="input-element"
            id="profile-picture-upload"
            type="file"
          />
        </div>
      </div>
      <div
        class="w-[110px] h-[110px] rounded-full p-[8.5px] absolute bottom-[-50px] left-0 right-0 mx-auto z-10"
      >
        <span
          class="relative flex shrink-0 overflow-hidden rounded-full w-[full] h-[full] bg-current"
          data-testid="avatar"
        >
          <span
            class="flex items-center justify-center w-24 h-24 rounded-full bg-slate-500"
          >
            CN
          </span>
        </span>
        <button
          aria-label="Upload profile picture"
          class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border rounded-full absolute bg-blue-500 bottom-0 right-2 w-[34px] h-[34px]"
        >
          <svg
            class="lucide lucide-plus text-white transition-all duration-300"
            fill="none"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
        </button>
        <div
          class="absolute top-2/3 left-1/2 flex justify-center items-center"
        >
          <div
            class="relative"
          >
            <button
              aria-label="Pop Button"
              class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-white text-button hover:bg-blue-100 hover:border-blue-100 hover:shadow-sphere-primary dark:hover:bg-blue-100 border-gray-800 dark:border-dark-500 -z-10 absolute border-none dark:bg-dark-900 rounded-full w-[34px] h-[34px] transition-all duration-300"
              style="transform: translate(0, -10px) rotate(10deg);"
            >
              <svg
                class="lucide lucide-camera text-slate-400 hover:text-white"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                style="transform: rotate(72deg);"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.5 4h-5L7 7H4a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-3l-2.5-3z"
                />
                <circle
                  cx="12"
                  cy="13"
                  r="3"
                />
              </svg>
            </button>
            <button
              aria-label="Pop Button"
              class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-white text-button hover:bg-blue-100 hover:border-blue-100 hover:shadow-sphere-primary dark:hover:bg-blue-100 border-gray-800 dark:border-dark-500 -z-10 absolute border-none dark:bg-dark-900 rounded-full w-[34px] h-[34px] transition-all duration-300"
              style="transform: translate(0, -10px) rotate(10deg);"
            >
              <svg
                class="lucide lucide-bell text-slate-400 hover:text-white"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                style="transform: rotate(36deg);"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 8a6 6 0 0 1 12 0c0 7 3 9 3 9H3s3-2 3-9"
                />
                <path
                  d="M10.3 21a1.94 1.94 0 0 0 3.4 0"
                />
              </svg>
            </button>
            <button
              aria-label="Pop Button"
              class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-white text-button hover:bg-blue-100 hover:border-blue-100 hover:shadow-sphere-primary dark:hover:bg-blue-100 border-gray-800 dark:border-dark-500 -z-10 absolute border-none dark:bg-dark-900 rounded-full w-[34px] h-[34px] transition-all duration-300"
              style="transform: translate(0, -10px) rotate(10deg);"
            >
              <svg
                class="lucide lucide-plus text-slate-400 hover:text-white"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                style="transform: rotate(0deg);"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
            </button>
            <button
              aria-label="Pop Button"
              class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-white text-button hover:bg-blue-100 hover:border-blue-100 hover:shadow-sphere-primary dark:hover:bg-blue-100 border-gray-800 dark:border-dark-500 -z-10 absolute border-none dark:bg-dark-900 rounded-full w-[34px] h-[34px] transition-all duration-300"
              style="transform: translate(0, -10px) rotate(10deg);"
            >
              <svg
                class="lucide lucide-message-circle text-slate-400 hover:text-white"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                style="transform: rotate(-36deg);"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
                />
              </svg>
            </button>
            <button
              aria-label="Pop Button"
              class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-white text-button hover:bg-blue-100 hover:border-blue-100 hover:shadow-sphere-primary dark:hover:bg-blue-100 border-gray-800 dark:border-dark-500 -z-10 absolute border-none dark:bg-dark-900 rounded-full w-[34px] h-[34px] transition-all duration-300"
              style="transform: translate(0, -10px) rotate(10deg);"
            >
              <svg
                class="lucide lucide-mail text-slate-400 hover:text-white"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                style="transform: rotate(-72deg);"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="16"
                  rx="2"
                  width="20"
                  x="2"
                  y="4"
                />
                <path
                  d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="space-y-2"
      >
        <div
          class="relative w-full flex items-center"
          data-testid="input-container"
        >
          <input
            aria-describedby=":rh:-form-item-description"
            aria-invalid="false"
            aria-label="Upload profile picture"
            autocomplete="off"
            class="h-10 w-full rounded-lg border border-input bg-white dark:bg-dark-500 px-3 py-2 text-sm file:border-0 file:bg-transparent file:text-xs file:font-medium file:text-foreground placeholder:text-muted-foreground outline-none disabled:cursor-not-allowed disabled:opacity-50 hidden"
            data-testid="input-element"
            id="avatar-picture-upload"
            type="file"
          />
        </div>
      </div>
    </div>
    <div
      class="w-full flex items-start justify-between py-3 mt-[50px]"
    >
      <div
        class="flex flex-col flex-1"
      >
        <span
          class="font-montserrat text-[25.6px] font-semibold"
        >
          2
        </span>
        <span
          class="text-neutral-100 text-4xs uppercase"
        >
          Members
        </span>
      </div>
      <div
        class="text-center flex-1"
      >
        <h2
          class="font-semibold font-montserrat text-xl"
        >
          Tech Enthusiasts
        </h2>
        <span
          class="font-roboto text-neutral-100 text-sm"
        >
          A group for technology lovers and innovators
        </span>
      </div>
      <div
        class="flex items-center justify-end flex-1 gap-2"
      >
        <button
          aria-controls="radix-:ri:"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="font-roboto justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring bg-transparent border-none rounded-none hover:bg-gray-100 dark:hover:bg-transparent text-neutral-200 dark:text-neutral-100 w-fit h-fit flex items-center gap-1 border border-gray-900"
          data-state="closed"
          disabled=""
          type="button"
        >
          <svg
            class="lucide lucide-square-pen"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.375 2.625a1 1 0 0 1 3 3l-9.013 9.014a2 2 0 0 1-.853.505l-2.873.84a.5.5 0 0 1-.62-.62l.84-2.873a2 2 0 0 1 .506-.852z"
            />
          </svg>
        </button>
        <button
          aria-controls="radix-:rl:"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="font-roboto justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-transparent border-none rounded-none hover:bg-gray-100 dark:hover:bg-transparent text-neutral-200 dark:text-neutral-100 w-fit h-fit flex items-center gap-1 hover:text-dark-900"
          data-state="closed"
          type="button"
        >
          <svg
            class="lucide lucide-log-out"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
            />
            <polyline
              points="16 17 21 12 16 7"
            />
            <line
              x1="21"
              x2="9"
              y1="12"
              y2="12"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`GroupHeader matches snapshot for non-admin user 1`] = `
<div>
  <div
    class="w-full"
  >
    <div
      class="flex flex-col items-center justify-center relative"
    >
      <div
        class="relative w-full h-56 md:h-80 group"
      >
        <img
          alt="This is banner Image"
          data-nimg="fill"
          decoding="async"
          loading="eager"
          sizes="100vw"
          src="http://localhost/_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=3840&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=640&q=75 640w, /_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=750&q=75 750w, /_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=828&q=75 828w, /_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=1080&q=75 1080w, /_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=1200&q=75 1200w, /_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=1920&q=75 1920w, /_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=2048&q=75 2048w, /_next/image?url=https%3A%2F%2Fexample.com%2Fbanner.jpg&w=3840&q=75 3840w"
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; object-fit: cover; color: transparent; background-size: cover; background-position: 50% 50%; background-repeat: no-repeat;"
        />
        <div
          class="absolute inset-0 z-10 bg-slate-700 bg-opacity-0 group-hover:bg-opacity-50 transition duration-300 ease-in-out"
        />
        <div
          class="absolute z-20 top-0 left-0 m-4"
        >
          <button
            class="font-roboto whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border h-9 px-3 flex items-center justify-center bg-transparent group border-transparent group-hover:border group-hover:border-white text-white rounded-sm"
          >
            <svg
              class="lucide lucide-camera text-2xl"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.5 4h-5L7 7H4a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-3l-2.5-3z"
              />
              <circle
                cx="12"
                cy="13"
                r="3"
              />
            </svg>
            <span
              class="ml-2 opacity-0 group-hover:opacity-100 transition-opacity"
            >
              Edit cover image
            </span>
          </button>
        </div>
      </div>
      <div
        class="space-y-2"
      >
        <div
          class="relative w-full flex items-center"
          data-testid="input-container"
        >
          <input
            aria-describedby=":r8:-form-item-description"
            aria-invalid="false"
            aria-label="Upload profile picture"
            autocomplete="off"
            class="h-10 w-full rounded-lg border border-input bg-white dark:bg-dark-500 px-3 py-2 text-sm file:border-0 file:bg-transparent file:text-xs file:font-medium file:text-foreground placeholder:text-muted-foreground outline-none disabled:cursor-not-allowed disabled:opacity-50 hidden"
            data-testid="input-element"
            id="profile-picture-upload"
            type="file"
          />
        </div>
      </div>
      <div
        class="w-[110px] h-[110px] rounded-full p-[8.5px] absolute bottom-[-50px] left-0 right-0 mx-auto z-10"
      >
        <span
          class="relative flex shrink-0 overflow-hidden rounded-full w-[full] h-[full] bg-current"
          data-testid="avatar"
        >
          <span
            class="flex items-center justify-center w-24 h-24 rounded-full bg-slate-500"
          >
            CN
          </span>
        </span>
        <button
          aria-label="Upload profile picture"
          class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border rounded-full absolute bg-blue-500 bottom-0 right-2 w-[34px] h-[34px]"
        >
          <svg
            class="lucide lucide-plus text-white transition-all duration-300"
            fill="none"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
        </button>
        <div
          class="absolute top-2/3 left-1/2 flex justify-center items-center"
        >
          <div
            class="relative"
          >
            <button
              aria-label="Pop Button"
              class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-white text-button hover:bg-blue-100 hover:border-blue-100 hover:shadow-sphere-primary dark:hover:bg-blue-100 border-gray-800 dark:border-dark-500 -z-10 absolute border-none dark:bg-dark-900 rounded-full w-[34px] h-[34px] transition-all duration-300"
              style="transform: translate(0, -10px) rotate(10deg);"
            >
              <svg
                class="lucide lucide-camera text-slate-400 hover:text-white"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                style="transform: rotate(72deg);"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.5 4h-5L7 7H4a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-3l-2.5-3z"
                />
                <circle
                  cx="12"
                  cy="13"
                  r="3"
                />
              </svg>
            </button>
            <button
              aria-label="Pop Button"
              class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-white text-button hover:bg-blue-100 hover:border-blue-100 hover:shadow-sphere-primary dark:hover:bg-blue-100 border-gray-800 dark:border-dark-500 -z-10 absolute border-none dark:bg-dark-900 rounded-full w-[34px] h-[34px] transition-all duration-300"
              style="transform: translate(0, -10px) rotate(10deg);"
            >
              <svg
                class="lucide lucide-bell text-slate-400 hover:text-white"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                style="transform: rotate(36deg);"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 8a6 6 0 0 1 12 0c0 7 3 9 3 9H3s3-2 3-9"
                />
                <path
                  d="M10.3 21a1.94 1.94 0 0 0 3.4 0"
                />
              </svg>
            </button>
            <button
              aria-label="Pop Button"
              class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-white text-button hover:bg-blue-100 hover:border-blue-100 hover:shadow-sphere-primary dark:hover:bg-blue-100 border-gray-800 dark:border-dark-500 -z-10 absolute border-none dark:bg-dark-900 rounded-full w-[34px] h-[34px] transition-all duration-300"
              style="transform: translate(0, -10px) rotate(10deg);"
            >
              <svg
                class="lucide lucide-plus text-slate-400 hover:text-white"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                style="transform: rotate(0deg);"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
            </button>
            <button
              aria-label="Pop Button"
              class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-white text-button hover:bg-blue-100 hover:border-blue-100 hover:shadow-sphere-primary dark:hover:bg-blue-100 border-gray-800 dark:border-dark-500 -z-10 absolute border-none dark:bg-dark-900 rounded-full w-[34px] h-[34px] transition-all duration-300"
              style="transform: translate(0, -10px) rotate(10deg);"
            >
              <svg
                class="lucide lucide-message-circle text-slate-400 hover:text-white"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                style="transform: rotate(-36deg);"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
                />
              </svg>
            </button>
            <button
              aria-label="Pop Button"
              class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-white text-button hover:bg-blue-100 hover:border-blue-100 hover:shadow-sphere-primary dark:hover:bg-blue-100 border-gray-800 dark:border-dark-500 -z-10 absolute border-none dark:bg-dark-900 rounded-full w-[34px] h-[34px] transition-all duration-300"
              style="transform: translate(0, -10px) rotate(10deg);"
            >
              <svg
                class="lucide lucide-mail text-slate-400 hover:text-white"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                style="transform: rotate(-72deg);"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="16"
                  rx="2"
                  width="20"
                  x="2"
                  y="4"
                />
                <path
                  d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="space-y-2"
      >
        <div
          class="relative w-full flex items-center"
          data-testid="input-container"
        >
          <input
            aria-describedby=":r9:-form-item-description"
            aria-invalid="false"
            aria-label="Upload profile picture"
            autocomplete="off"
            class="h-10 w-full rounded-lg border border-input bg-white dark:bg-dark-500 px-3 py-2 text-sm file:border-0 file:bg-transparent file:text-xs file:font-medium file:text-foreground placeholder:text-muted-foreground outline-none disabled:cursor-not-allowed disabled:opacity-50 hidden"
            data-testid="input-element"
            id="avatar-picture-upload"
            type="file"
          />
        </div>
      </div>
    </div>
    <div
      class="w-full flex items-start justify-between py-3 mt-[50px]"
    >
      <div
        class="flex flex-col flex-1"
      >
        <span
          class="font-montserrat text-[25.6px] font-semibold"
        >
          2
        </span>
        <span
          class="text-neutral-100 text-4xs uppercase"
        >
          Members
        </span>
      </div>
      <div
        class="text-center flex-1"
      >
        <h2
          class="font-semibold font-montserrat text-xl"
        >
          Tech Enthusiasts
        </h2>
        <span
          class="font-roboto text-neutral-100 text-sm"
        >
          A group for technology lovers and innovators
        </span>
      </div>
      <div
        class="flex items-center justify-end flex-1 gap-2"
      >
        <button
          aria-controls="radix-:ra:"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="font-roboto justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring bg-transparent border-none rounded-none hover:bg-gray-100 dark:hover:bg-transparent text-neutral-200 dark:text-neutral-100 w-fit h-fit flex items-center gap-1 border border-gray-900"
          data-state="closed"
          disabled=""
          type="button"
        >
          <svg
            class="lucide lucide-square-pen"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.375 2.625a1 1 0 0 1 3 3l-9.013 9.014a2 2 0 0 1-.853.505l-2.873.84a.5.5 0 0 1-.62-.62l.84-2.873a2 2 0 0 1 .506-.852z"
            />
          </svg>
        </button>
        <button
          aria-controls="radix-:rd:"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="font-roboto justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-transparent border-none rounded-none hover:bg-gray-100 dark:hover:bg-transparent text-neutral-200 dark:text-neutral-100 w-fit h-fit flex items-center gap-1 hover:text-dark-900"
          data-state="closed"
          type="button"
        >
          <svg
            class="lucide lucide-log-out"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
            />
            <polyline
              points="16 17 21 12 16 7"
            />
            <line
              x1="21"
              x2="9"
              y1="12"
              y2="12"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
